feat(dashboard): add QuickAddTask component and update i18n locales

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,5 +8,6 @@
   "stats": "Stats",
   "settings": "Settings",
   "changeLang": "Change language",
+  "quickAddTaskPlaceholder": "Task for today?",
   "locale": "en-US"
 }
