--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -7,6 +7,7 @@
   "journal": "Дневник",
   "stats": "Статистика",
   "settings": "Настройки",
-  "changeLn": "Смена языка",
+  "changeLang": "Смена языка",
+  "quickAddTaskPlaceholder": "Задача на сегодня?",
   "locale": "ru-RU"
 }
