--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -19,5 +19,12 @@
   "emptyTasksList": "Tasks list is empty",
   "today": "Today",
   "addHabit": "Add habit",
+  "monday": "Monday",
+  "tuesday": "Tuesday",
+  "wednesday": "Wednesday",
+  "thursday": "Thursday",
+  "friday": "Friday",
+  "saturday": "Saturday",
+  "sunday": "Sunday",
   "locale": "en-US"
 }
