--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -19,5 +19,12 @@
   "emptyTasksList": "Список задач пуст",
   "today": "Сегодня",
   "addHabit": "Добавить привычку",
+  "monday": "Понедельник",
+  "tuesday": "Вторник",
+  "wednesday": "Среда",
+  "thursday": "Четверг",
+  "friday": "Пятница",
+  "saturday": "Суббота",
+  "sunday": "Воскресенье",
   "locale": "ru-RU"
 }
